# rayskeleton

./: CMakeLists.txt  LICENSE.md  README.md  bootstrap.bat  bootstrap.sh
src/: CMakeLists.txt  main.c
