SET(SOURCES
    main.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME} PUBLIC
    ${DEPS_INSTALL_DIR}/include
)

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}
    ${DEPS_INSTALL_DIR}/lib/libraylib.a
    ${DEPS_INSTALL_DIR}/lib/libglfw3.a
)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} -lm -ldl -lpthread -lX11 -lXrandr
        -lXinerama -lXi -lXxf86vm -lXcursor)
ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} gdi32)
ENDIF()

IF(CMAKE_COMPILER_IS_GNUCC)
    TARGET_COMPILE_OPTIONS(${CMAKE_PROJECT_NAME} PRIVATE -Wall -std=c99)
ELSEIF(MSVC)
    # TODO: Set these to something that corresponds to the GCC flags?
ENDIF()
