SET(LOCAL_RAYLIB "" CACHE PATH "Path to a local raylib installation")

IF(LOCAL_RAYLIB)
    SET(CMAKE_PREFIX_PATH ${LOCAL_RAYLIB})
ENDIF()

FIND_PACKAGE(glfw3 REQUIRED)
FIND_PACKAGE(raylib REQUIRED)

SET(SOURCES
    main.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} PRIVATE raylib)

IF(CMAKE_COMPILER_IS_GNUCC)
    TARGET_COMPILE_OPTIONS(${CMAKE_PROJECT_NAME} PRIVATE -Wall -std=c99)
ELSEIF(MSVC)
    # TODO: Set these to something that corresponds to the GCC flags?
ENDIF()
